# based58

./: .buildinfo  .flake8  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  api_reference.html  based58.pyi  bench.json  bench.py  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/workflows/: build.yml  docs.yml  lint.yml
_sources/: api_reference.rst.txt
docs/: api_reference.md  conf.py  index.md  index.rst
src/: lib.rs
tests/: test_alphabet.py  test_encode_decode.py
