[package]
name = "based58"
version = "0.1.0"
edition = "2021"
include = ["src/lib.rs", "./LICENSE", "pyproject.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "based58"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.16.4", features = ["extension-module", "abi3-py37"] }
bs58 = { version = "0.4.0", features = ["check"] }
